--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -1,4 +1,4 @@
-html{
+/* html{
     height: 100vh;
     width: 100vw;
 }
@@ -9,7 +9,7 @@ body{
     width: 100%;
     margin: 0;
     padding: 0;
-}
+} */
 
 .entry-area{
     width: 80%;
