--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -2,20 +2,17 @@
     height: 100vh;
     width: 100vw;
 }
-
-body{
-    background-color: beige;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-} */
-
-.entry-area{
-    width: 80%;
-    margin: auto;
+*/
+body {
+  background-color: beige;
+  margin: 0;
 }
 
-.text-area{
-    width: 100%;
+.entry-area {
+  width: 80%;
+  margin: auto;
+}
+
+.text-area {
+  width: 100%;
 }
