--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -4,7 +4,6 @@
 }
 */
 body {
-  background-color: beige;
   margin: 0;
 }
 
@@ -15,4 +14,12 @@ body {
 
 .text-area {
   width: 100%;
+}
+
+.landing-page-title{
+  margin-top: 100px;
+}
+
+.col-md-6{
+  padding: 0;
 }
