--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -9,7 +9,15 @@ body {
   padding: 0;
   background-color: #2b4b82;
   font-family: 'DM Sans', sans-serif;
-  overflow: hidden;
+}
+
+.disableScroll{
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+.enableScroll{
+  overflow: auto;
 }
 
 .center{
@@ -179,6 +187,14 @@ body {
 .no-media{
   display: inline-block;
   width: 80%;
+}
+
+#files{
+  display: none;
+}
+
+.media-tray-container{
+  overflow: auto;
 }
 
 /* Footer */
