Checking whether  username or email already exists

--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -84,7 +84,8 @@ body {
 }
 
 .set-signup-button-colour{
-  background-color: #5ce1e6;
+  /* background-color: #5ce1e6; */
+  background-color: #D1FFF3;
 }
 
 .margin-between-input{
