--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -158,8 +158,14 @@ border-color: #31347B;
 }
 
 /* Main Page Cards */
-.card-padding {
-  padding: 1% 1%;
+
+.entry-display-container{
+  height: 200px;
+  margin: 0;
+}
+
+.card-container{
+  height: 100%;
 }
 
 .card-red{
@@ -177,11 +183,12 @@ border-color: #31347B;
 
 .main-page-card-title{
   font-family: 'Montserrat';
+  font-size: 1.4rem;
   /* text-align: center; */
 }
 
 .main-page-card-text{
-  font-size: 1.25rem;
+  font-size: 1.1rem;
   font-family: 'Montserrat', serif;
 }
 
