--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -1,26 +1,26 @@
-html{
-    height: 100vh;
-    padding: 0;
-    margin: 0;
+html {
+  height: 100vh;
+  padding: 0;
+  margin: 0;
 }
 
 body {
   margin: 0;
   padding: 0;
   background-color: #2b4b82;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 
-.disableScroll{
+.disableScroll {
   overflow-x: hidden;
   overflow-y: hidden;
 }
 
-.enableScroll{
+.enableScroll {
   overflow: auto;
 }
 
-.center{
+.center {
   position: absolute;
   top: 50%;
   transform: translate(0, -50%);
@@ -29,7 +29,7 @@ body {
   background-color: #2b4b82;
 }
 
-.col-md-6{
+.col-md-6 {
   padding: 0;
 }
 
@@ -55,17 +55,17 @@ body {
 }
 
 /* Sign up */
-.big-heading{
-  font-family: 'DM Sans', sans-serif;
+.big-heading {
+  font-family: "DM Sans", sans-serif;
   font-size: 3.5rem;
   line-height: 1.5;
   color: #f7b4a7;
 }
 
-.sub-text{
+.sub-text {
   color: #94ddde;
 }
-.center-div{
+.center-div {
   margin-top: 7%;
 }
 
@@ -79,123 +79,124 @@ body {
   color: white;
 }
 
-.set-colour{
+.set-colour {
   background-color: #6784b6;
 }
 
-.set-signup-button-colour{
+.set-signup-button-colour {
   /* background-color: #5ce1e6; */
-  background-color:#f7b4a7;
+  background-color: #f7b4a7;
 }
 
-.margin-between-input{
+.margin-between-input {
   margin-bottom: 7px;
 }
 
-.first-name-button{
+.first-name-button {
   padding-left: 0;
-} 
+}
 
-.last-name-button{
+.last-name-button {
   padding-right: 0;
 }
 
-.card-border-radius, .button-text{
+.card-border-radius,
+.button-text {
   border-radius: 2em;
 }
-.align-card{
+.align-card {
   margin-left: auto;
   margin-right: auto;
 }
 
-.account-text{
+.account-text {
   padding-top: 2%;
 }
-.width-50{
+.width-50 {
   width: 50%;
 }
 
-.width-100{
+.width-100 {
   width: 100%;
 }
 
-.height-100{
+.height-100 {
   height: 100%;
 }
 
 /* Navbar */
 
-.navbar-container{
+.navbar-container {
   border-bottom: 1.5px solid white;
 }
 
-.navbar-brand{
+.navbar-brand {
   font-size: 2rem;
 }
 
-.center-element{
-  margin-left:auto;
-  margin-right:auto;
-  display:block;
+.center-element {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
-.table_data{
+.table_data {
   padding-right: 50px;
 }
 
-.btn-default
-{
-background-color: #f7b4a7;
-color:#FFF;
-border-color: #2F3E48;
+.btn-default {
+  background-color: #f7b4a7;
+  color: #fff;
+  border-color: #2f3e48;
 }
 
-.btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open .dropdown-toggle.btn-default {
-background-color: #2F3E48;
-color:#FFF; 
-border-color: #31347B;
- 
+.btn-default:hover,
+.btn-default:focus,
+.btn-default:active,
+.btn-default.active,
+.open .dropdown-toggle.btn-default {
+  background-color: #2f3e48;
+  color: #fff;
+  border-color: #31347b;
 }
 
 /* Main Page Cards */
 
-.entry-display-container{
+.entry-display-container {
   height: 200px;
   margin: 0;
 }
 
-.card-container{
+.card-container {
   height: 100%;
 }
 
-.card-red{
+.card-red {
   background: linear-gradient(-45deg, #ffec61, #f321d7);
-  box-shadow: 0 10px 15px rgba(0,0,0,0.3);
-  transition: .5s;
-
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
+  transition: 0.5s;
 }
 
-.card-red:hover{
+.card-red:hover {
   transition: 1;
   transform: scale(1.05);
-  box-shadow: 0 10px 20px rgba(0,0,0,.09), 0 4px 8px rgba(0,0,0,.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.09), 0 4px 8px rgba(0, 0, 0, 0.05);
 }
 
-.main-page-card-title{
-  font-family: 'Montserrat';
+.main-page-card-title {
+  font-family: "Montserrat";
   font-size: 1.4rem;
   /* text-align: center; */
 }
 
-.main-page-card-text{
+.main-page-card-text {
   font-size: 1.1rem;
-  font-family: 'Montserrat', serif;
+  font-family: "Montserrat", serif;
 }
 
-.align-card-button{
+.align-card-button {
   text-align: center;
 }
-
 
 /* Create New Entry */
 
@@ -209,18 +210,18 @@ border-color: #31347B;
   flex-grow: 1;
 }
 
-.title-done-button-row{
+.title-done-button-row {
   width: 100%;
   margin: 0;
 }
 
-.entry-title-container{
+.entry-title-container {
   border-bottom: 1.5px solid white;
   color: white;
   /* margin-top: 30px; */
 }
 
-.entry-title{
+.entry-title {
   width: 80%;
   height: 100%;
   border: none;
@@ -230,11 +231,11 @@ border-color: #31347B;
   color: white;
 }
 
-.done-button{
+.done-button {
   color: white;
 }
 
-.entry-content{
+.entry-content {
   width: 100%;
   background: transparent;
   outline: none;
@@ -243,43 +244,46 @@ border-color: #31347B;
   resize: none;
 }
 
-.table-class{
+.table-class {
   table-layout: fixed;
 }
 
-.no-media-container{
+.no-media-container {
   text-align: center;
 }
 
-.no-media{
+.no-media {
   display: inline-block;
   width: 80%;
 }
 
-#files{
+#files {
   display: none;
 }
 
-.media-tray-container{
+.noDisplay {
+  display: none;
+}
+
+.media-tray-container {
   overflow: auto;
 }
 
-.lead{
+.lead {
   margin: 0;
   color: white;
 }
 
-.audio-player{
+.audio-player {
   width: 100%;
   color: rgba(165, 134, 134, 0.4);
 }
 
 /* audio player imported style */
 
-
 /* Footer */
 
-.footer{
+.footer {
   width: 100%;
   height: 25px;
   position: fixed;
@@ -287,6 +291,40 @@ border-color: #31347B;
   background-color: #17263f;
 }
 
-.date-p{
+.date-p {
   color: white;
+}
+
+/* Full Viewer */
+.full-view-container {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  background-color: rgba(18, 18, 18, 0.5);
+  z-index: 3;
+  padding: 0;
+}
+
+.full-image {
+  /* width:75%; */
+  margin: auto;
+  height: 80vh;
+}
+
+.full-video {
+  /* width:75%; */
+  margin: auto;
+  height: 80vh;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.close-full-view {
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  z-index: 4;
 }
