--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -182,6 +182,22 @@ body {
   height: 100%;
 }
 
+.card-dropdown{
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+
+.card-menu-item{
+  padding: 0 5px;
+  border-radius: 3px;
+}
+
+.card-menu-item:hover{
+  background-color: rgb(200,200,200);
+  transition: 0.25s;
+}
+
 .card-red {
   /* background: linear-gradient(-45deg, #ffec61, #f321d7); */
   background-size: cover;
