Complete Edit Profile

--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -484,17 +484,13 @@ body {
     display: inline-block;
     line-height: 2.2em;
     padding: 0 0.62em;
-    border: 1px solid #666;
     border-radius: 0.25em;
-    background-image: linear-gradient( to bottom, #fff, #ccc );
+    background-color: rgb(11,94,213);
     font-family: "Montserrat";
     font-size: 0.9em;
+    color: white;
  }
 
-.uploadImage:hover {
-    border-color: #3c7fb1;
-    background-image: linear-gradient( to bottom, #fff, #a9dbf6 );
- }
 
 .uploadImage:focus {
     padding: 0  0.56em 0 0.68em;
