--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -485,12 +485,17 @@ body {
     line-height: 2.2em;
     padding: 0 0.62em;
     border-radius: 0.25em;
-    background-color: rgb(11,94,213);
+    background-color: #0d6efd;
+    border-color: #0d6efd;
     font-family: "Montserrat";
     font-size: 0.9em;
     color: white;
+    transition: 0.2s;
  }
 
+ .uploadImage:hover{
+  background-color: #0b5ed7;
+ }
 
 .uploadImage:focus {
     padding: 0  0.56em 0 0.68em;
