--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -483,8 +483,8 @@ body {
 .uploadImage{
     display: inline-block;
     line-height: 2.2em;
-    padding: 0 0.62em;
-    border-radius: 0.25em;
+    padding: 0.25em 0.62em;
+    border-radius: 0.30em;
     background-color: #0d6efd;
     border-color: #0d6efd;
     font-family: "Montserrat";
