--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -14,6 +14,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   font-family: "DM Sans", sans-serif;
+  cursor: default;
 }
 
 .disableScroll {
@@ -372,6 +373,10 @@ body {
   /* background: none; */
   background-color: rgba(18, 18, 18, 0.3);
   border-top: solid rgb(200, 200, 200) 1px;
+}
+
+.audioControl{
+  volume: 0.5;
 }
 
 .my-dropdown {
